Creatde 2 new apps for better modularity

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,8 @@
     <section id="about" class="section">
         <h1>About Osteoarthritis</h1>
         <p>
-            Your introduction to osteoarthritis. Provide a summary of what osteoarthritis is and why it's important.
+            Osteoarthritis is a very common condition which can affect any joint in the body. It’s most likely to affect the joints that bear most of our weight, such as the knees and feet. 
+            Joints that we use a lot in everyday life, such as the joints of the hand, are also commonly affected.
         </p>
     </section>
 
@@ -42,4 +43,5 @@
         <p>&copy; 2023 Your Website Name</p>
     </footer>
 </body>
+
 </html>
